generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// 1. ProducerGroup (작목반 관리) - 인증정보는 여기서 관리
model ProducerGroup {
  id             Int       @id @default(autoincrement())
  code           String    // 작목반번호 (e.g., '1')
  name           String    // 작목반명
  
  certType       String    // 인증 종류 (유기농, 무농약, 일반)
  certNo         String    // 인증 번호 (15102443 등)
  
  cropYear       Int       // 생산년도 (2024, 2025...)
  
  farmers        Farmer[]
  
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt

  @@unique([code, cropYear]) // 같은 년도 내에서는 코드가 유일해야 함
}

// 2. Farmer (생산자/농가 관리)
model Farmer {
  id             Int            @id @default(autoincrement())
  name           String         // 농가명
  farmerNo       String?        // 농가번호 (e.g., '1')
  items          String?        // 취급품목
  phone          String?        // 연락처 (선택)
  
  groupId        Int?
  group          ProducerGroup? @relation(fields: [groupId], references: [id])
  
  stocks         Stock[]
  
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  @@unique([groupId, farmerNo]) // 그룹 내 농가번호는 유니크해야 함
}

// 3. Variety (품종 관리)
model Variety {
  id             Int       @id @default(autoincrement())
  name           String    @unique // 품종명
  type           String    // 곡종 구분 (URUCHI, GLUTINOUS, BLACK 등)
  stocks         Stock[]
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt
}

// 4. Stock (벼 재고)
model Stock {
  id             Int                  @id @default(autoincrement())
  bagNo          Int                  // 톤백 번호
  
  farmerId       Int
  farmer         Farmer               @relation(fields: [farmerId], references: [id])
  
  varietyId      Int
  variety        Variety              @relation(fields: [varietyId], references: [id])
  
  incomingDate   DateTime             @default(now()) // 입고일 (로트 생성 기준)
  productionYear Int                  @default(2024)  // 생산년도
  weightKg       Float                // 입고 중량
  status         String               // AVAILABLE / CONSUMED / RELEASED
  lotNo          String?              // Pre-assigned Lot Number (Default: White Rice basis)
  
  batchId        Int?
  batch          MillingBatch?        @relation(fields: [batchId], references: [id])

  releaseId      Int?
  release        StockRelease?        @relation(fields: [releaseId], references: [id])
  
  createdAt      DateTime             @default(now())
  updatedAt      DateTime             @updatedAt
}

// 4.5 StockRelease (재고 직접 출고/판매 기록)
model StockRelease {
  id          Int      @id @default(autoincrement())
  date        DateTime // 출고일 (사용자 입력)
  destination String   // 출고처
  purpose     String?  // 출고목적/비고

  stocks      Stock[]

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// 5. MillingBatch (도정 작업 메인)
model MillingBatch {
  id             Int                    @id @default(autoincrement())
  date           DateTime               @default(now())
  
  millingType    String                 @default("백미")
  remarks        String?
  totalInputKg   Float                  
  
  stocks         Stock[]                // 투입된 벼 리스트
  outputs        MillingOutputPackage[] // 생산된 포장 리스트
  
  isClosed       Boolean                @default(false)
  createdAt      DateTime               @default(now())
  updatedAt      DateTime               @updatedAt
}

// 6. MillingOutputPackage (포장 상세 - 로트번호 생성 위치)
model MillingOutputPackage {
  id            Int           @id @default(autoincrement())
  batchId       Int
  batch         MillingBatch  @relation(fields: [batchId], references: [id])
  
  packageType   String        // '20kg', '10kg', '5kg', 'Tonbag'
  weightPerUnit Float         
  count         Int           
  totalWeight   Float         
  
  productCode   String?       // 제품코드 (예: 11)
  lotNo         String?       // 최종 로트번호 (예: 251119-11-15102443-371)
  
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
}

// 7. User (사용자 계정)
model User {
  id          Int      @id @default(autoincrement())
  username    String   @unique // 아이디 (astraverse)
  password    String   // 비밀번호 (Hashed)
  name        String   // 이름 (문희준)
  department  String?  // 부서 (공장)
  position    String?  // 직책 (주임)
  phone       String?  // 연락처 (01086549345)
  role        String   @default("USER") // ADMIN, USER
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}
